src/objects/Contract__c.object
<CustomObject>
    <fields>
        <fullName>Doctor__c</fullName>
        <label>Doctor</label>
        <referenceTo>Doctor__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EndDate__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hosp_Cont_Full_Name__c</fullName>
        <formula>Doctor__r.FirstLastName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital__c</fullName>
        <label>Hospital</label>
        <referenceTo>Hospital__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>isFinished__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isFinished</label>
        <type>Checkbox</type>
    </fields>
    <label>Contract</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Contract no. {0000}</displayFormat>
        <label>Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>No_Contract_In_Past</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
 StartDate__c &lt;  TODAY(),
 EndDate__c &lt; TODAY()
)</errorConditionFormula>
        <errorMessage>Contract in past not allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartDateBeforeEndDate</fullName>
        <active>true</active>
        <errorConditionFormula>StartDate__c &gt; EndDate__c</errorConditionFormula>
        <errorDisplayField>StartDate__c</errorDisplayField>
        <errorMessage>Start date must be before end date</errorMessage>
    </validationRules>
</CustomObject>